--- a/usersessions/templates/usersessions/session_detail.html
+++ b/usersessions/templates/usersessions/session_detail.html
@@ -1,58 +1,40 @@
-{% extends 'base.html' %}
+{% extends 'usersessions/table_detail_page.html' %}
 
-{% block body %}
+{% block details %}
+<div>
+    <h2>{{ session.session_name }}</h2>
+    <p><b>Start Time:</b> {{ session.session_time_start|date:"n-j-y" }}, {{ session.session_time_start|time:"G:i" }} <br>
+    <b>End Time:</b>
+        {% if session.session_time_end %}
+            {{ session.session_time_end|date:"n-j-y" }}, {{ session.session_time_end|time:"G:i" }}
+        {% else %}
+            -
+        {% endif %}<br>
+    <b>Description:</b> {{ session.description }} <br></p>
 
-<div class="container">
-
-    <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-12 col-md-10">
-                
-            <div class="d-flex justify-content-center mt-4">
-                <div class="card p-4">
-                    <div>
-                        <h2>{{ session.session_name }}</h2>
-                        <p><b>Start Time:</b> {{ session.session_time_start|date:"n-j-y" }}, {{ session.session_time_start|time:"G:i" }} <br>
-                        <b>End Time:</b>
-                            {% if session.session_time_end %}
-                                {{ session.session_time_end|date:"n-j-y" }}, {{ session.session_time_end|time:"G:i" }}
-                            {% else %}
-                                -
-                            {% endif %}<br>
-                        <b>Description:</b> {{ session.description }} <br></p>
-
-                    </div>
-
-                    <table class="table-sm table-hover mb-4">
-                        <h4>Tasks</h4>
-                        <thead class="">
-                            <tr >
-                                <th class="pr-4" scope="col">Task Name</th>
-                                <th class="pr-4" scope="col">Time Started</th>
-                                <th class="pr-4" scope="col">Time</th>
-                                <th scope="col">Category</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for task in tasks %}
-                                <tr>
-                                    <td class="pr-4" >{{ task.task_name }}</td>
-                                    <td class="pr-4">{{ task.time_start|date:"n-j-y" }}, {{ task.time_start|time:"G:i" }}</td>                
-                                    <td class="pr-4">{{ task.task_time }}</td>
-                                    <td>{{ task.category }}</td>
-                                </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-
-                    <a href="/sessions" class="btn btn-search" role="button">Back to Sessions</a>
-                </div>
-            </div>
-        </div>
- 
-        <div class="col-md-1"></div>
-    </div>
-    
 </div>
 
+<table class="table-sm table-hover mb-4">
+    <h4>Tasks</h4>
+    <thead class="">
+        <tr >
+            <th class="pr-4" scope="col">Task Name</th>
+            <th class="pr-4" scope="col">Time Started</th>
+            <th class="pr-4" scope="col">Time</th>
+            <th scope="col">Category</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for task in tasks %}
+            <tr>
+                <td class="pr-4" >{{ task.task_name }}</td>
+                <td class="pr-4">{{ task.time_start|date:"n-j-y" }}, {{ task.time_start|time:"G:i" }}</td>                
+                <td class="pr-4">{{ task.task_time }}</td>
+                <td>{{ task.category }}</td>
+            </tr>
+        {% endfor %}
+    </tbody>
+</table>
+
+<a href="/sessions" class="btn btn-search" role="button">Back to Sessions</a>
 {% endblock %}
