--- a/usersessions/templates/usersessions/session_detail.html
+++ b/usersessions/templates/usersessions/session_detail.html
@@ -3,10 +3,10 @@
 {% block details %}
 <div>
     <h2>{{ session.session_name }}</h2>
-    <p><b>Start Time:</b> {{ session.session_time_start|date:"n-j-y" }}, {{ session.session_time_start|time:"G:i" }} <br>
+    <p><b>Start Time:</b> {{ session.session_time_start|date:"n-j-y" }}, {{ session.session_time_start|time:"g:i A" }} <br>
     <b>End Time:</b>
         {% if session.session_time_end %}
-            {{ session.session_time_end|date:"n-j-y" }}, {{ session.session_time_end|time:"G:i" }}
+            {{ session.session_time_end|date:"n-j-y" }}, {{ session.session_time_end|time:"g:i A" }}
         {% else %}
             -
         {% endif %}<br>
@@ -28,7 +28,7 @@
         {% for task in tasks %}
             <tr>
                 <td class="pr-4" >{{ task.task_name }}</td>
-                <td class="pr-4">{{ task.time_start|date:"n-j-y" }}, {{ task.time_start|time:"G:i" }}</td>                
+                <td class="pr-4">{{ task.time_start|date:"n-j-y" }}, {{ task.time_start|time:"g:i A" }}</td>                
                 <td class="pr-4">{{ task.task_time }}</td>
                 <td>{{ task.category }}</td>
             </tr>
