--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,9 @@
             <li class="nav-item">
                 <a class="left-nav-menu  {% if request.resolver_match.url_name == "tasks" %}active{% endif %}" href="{% url 'tasks' %}">Tasks</a>
             </li>
+            <li class="nav-item">
+                <a class="left-nav-menu  {% if request.resolver_match.url_name == "categories" %}active{% endif %}" href="{% url 'categories' %}">Categories</a>
+            </li>
         </ul>
     </div>
     {% endif %}
