delete session/task data and reset profile data

--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -139,6 +139,11 @@
                             <a class="btn-search btn " href="{% url 'index' %}">Return To Timer</a>
                         {% endbuttons %}
                     </div>
+                    <div class="mt-3 d-flex justify-content-around">
+                        {% buttons %}
+                            <a class="btn-search btn " href="/deleteAllData">Delete Account</a>
+                        {% endbuttons %}
+                    </div>
 
                 </div>
             </div>
