--- a/usersessions/templates/usersessions/table_page.html
+++ b/usersessions/templates/usersessions/table_page.html
@@ -4,78 +4,77 @@
 
 {% block body %}
 
-<div class="container">
+    <div class="container">
 
-    <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-12 col-md-10">
-            <div class="d-flex justify-content-center mt-4">
-                <form class='form-inline' method="GET" action="">
-                    {% block search %}
-                    <input class="form-control" type="text" aria-label="Search" type="search" name="search" placeholder="Search..."> 
-                    <button class="mx-2 btn btn-search" type="submit">Search</button>
-                    {% endblock %}
-                </form> 
-            </div>
-                
-            <div>
-                <div class="card p-2">
-                    <table class="table-sm table-hover">
-                        {% block table %}
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-12 col-md-10">
+                <div class="d-flex justify-content-center mt-4">
+                    <form class='form-inline' method="GET" action="">
+                        {% block search %}
+                            <input class="form-control" aria-label="Search" type="search" name="search"
+                                   placeholder="Search...">
+                            <button class="mx-2 btn btn-search" type="submit">Search</button>
                         {% endblock %}
-                    </table>
+                    </form>
                 </div>
-            </div>                   
 
-            <div class="mt-2">
-                <div class="pagination justify-content-center">
-                <nav aria-label="Page navigation">
-                    <ul class="pagination pagination-sm">                        
-                        {% if page_content.has_previous %}
-                        <li class="page-item">
-                        <a class="page-link" href="?page={{ page_content.previous_page_number }}" aria-label="Previous">
-                            <span aria-hidden="true">&laquo;</span>
-                        </a>
-                        {% else %}
-                        <li class="page-item disabled">
-                        <a class="page-link" href="?page=#" aria-label="Previous">
-                            <span aria-hidden="true">&laquo;</span>
-                        </a>
-                        {% endif %}
-                        </li>
+                <div>
+                    <div class="card p-2">
+                        <table class="table-sm table-hover">
+                            {% block table %}
+                            {% endblock %}
+                        </table>
+                    </div>
+                </div>
 
-                        {% for i in page_content.paginator.page_range %}
-                            {% if i == page_content.number %}
-                                <li class="page-item active">
-                            {% else %}
-                                <li class="page-item">
-                            {% endif %}
+                <div class="mt-2">
+                    <div class="pagination justify-content-center">
+                        <nav aria-label="Page navigation">
+                            <ul class="pagination pagination-sm">
+                                {% if page_content.has_previous %}
+                                    <li class="page-item">
+                                        <a class="page-link" href="?page={{ page_content.previous_page_number }}"
+                                           aria-label="Previous">
+                                            <span aria-hidden="true">&laquo;</span>
+                                        </a>
+                                        {% else %}
+                                    <li class="page-item disabled">
+                                    <a class="page-link" href="?page=#" aria-label="Previous">
+                                        <span aria-hidden="true">&laquo;</span>
+                                    </a>
+                                {% endif %}
+                                </li>
+
+                                {% for i in page_content.paginator.page_range %}
+                                    {% if i == page_content.number %}
+                                        <li class="page-item active">
+                                            {% else %}
+                                        <li class="page-item">
+                                    {% endif %}
                                 <a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
-                        {% endfor %}
+                                {% endfor %}
 
-                        {% if page_content.has_next %}
-                        <li class="page-item">
-                        <a class="page-link" href="?page={{ page_content.next_page_number }}" aria-label="Next">
-                            <span aria-hidden="true">&raquo;</span>
-                        </a>
-                        {% else %}
-                        <li class="page-item disabled">
-                        <a class="page-link" href="?page={{ page_content.number }}" aria-label="Next">
-                            <span aria-hidden="true">&raquo;</span>
-                        </a>
-                        {% endif %}
-                        </li>
-                    </ul>
-                </nav>
+                                {% if page_content.has_next %}
+                                    <li class="page-item">
+                                        <a class="page-link" href="?page={{ page_content.next_page_number }}"
+                                           aria-label="Next">
+                                            <span aria-hidden="true">&raquo;</span>
+                                        </a>
+                                        {% else %}
+                                    <li class="page-item disabled">
+                                    <a class="page-link" href="?page={{ page_content.number }}" aria-label="Next">
+                                        <span aria-hidden="true">&raquo;</span>
+                                    </a>
+                                {% endif %}
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
                 </div>
             </div>
+            <div class="col-md-1"></div>
         </div>
-    
-        <div class="col-md-1"></div>
     </div>
-    
-
-    
-</div>
 
 {% endblock %}
