--- a/usersessions/templates/usersessions/session_detail.html
+++ b/usersessions/templates/usersessions/session_detail.html
@@ -1,40 +1,40 @@
 {% extends 'usersessions/table_detail_page.html' %}
 
 {% block details %}
-<div>
-    <h2>{{ session.session_name }}</h2>
-    <p><b>Start Time:</b> {{ session.session_time_start|date:"n-j-y" }}, {{ session.session_time_start|time:"g:i A" }} <br>
-    <b>End Time:</b>
-        {% if session.session_time_end %}
-            {{ session.session_time_end|date:"n-j-y" }}, {{ session.session_time_end|time:"g:i A" }}
-        {% else %}
-            -
-        {% endif %}<br>
-    <b>Description:</b> {{ session.description }} <br></p>
+    <div>
+        <h2>{{ session.session_name }}</h2>
+        <p><b>Start
+            Time:</b> {{ session.session_time_start|date:"n-j-y" }}, {{ session.session_time_start|time:"g:i A" }} <br>
+            <b>End Time:</b>
+            {% if session.session_time_end %}
+                {{ session.session_time_end|date:"n-j-y" }}, {{ session.session_time_end|time:"g:i A" }}
+            {% else %}
+                -
+            {% endif %}<br>
+            <b>Description:</b> {{ session.description }} <br></p>
+    </div>
 
-</div>
-
-<table class="table-sm table-hover mb-4">
     <h4>Tasks</h4>
-    <thead class="">
-        <tr >
+    <table class="table-sm table-hover mb-4">
+        <thead class="">
+        <tr>
             <th class="pr-4" scope="col">Task Name</th>
             <th class="pr-4" scope="col">Time Started</th>
             <th class="pr-4" scope="col">Time</th>
             <th scope="col">Category</th>
         </tr>
-    </thead>
-    <tbody>
+        </thead>
+        <tbody>
         {% for task in tasks %}
             <tr>
-                <td class="pr-4" >{{ task.task_name }}</td>
-                <td class="pr-4">{{ task.time_start|date:"n-j-y" }}, {{ task.time_start|time:"g:i A" }}</td>                
+                <td class="pr-4">{{ task.task_name }}</td>
+                <td class="pr-4">{{ task.time_start|date:"n-j-y" }}, {{ task.time_start|time:"g:i A" }}</td>
                 <td class="pr-4">{{ task.task_time }}</td>
                 <td>{{ task.category }}</td>
             </tr>
         {% endfor %}
-    </tbody>
-</table>
+        </tbody>
+    </table>
 
-<a href="/sessions" class="btn btn-search" role="button">Back to Sessions</a>
+    <a href="/sessions" class="btn btn-search" role="button">Back to Sessions</a>
 {% endblock %}
