Revert "Add categories tab with details and delete buttons"

--- a/timer/templates/index.html
+++ b/timer/templates/index.html
@@ -63,14 +63,10 @@
                             {% for category in task_categories %}
                             <option value="{{ category}}">{{ category}}</option>
                             {% empty %}
-                            <option value="General">General</option>
-                            <option value="Homework">Homework</option>
-                            <option value="Studying">Studying</option>
-                            <option value="Work">Work</option>
-                            <option value="Reading">Reading</option>
+                            <option value="general">General</option>
                             {% endfor %}
                         </select>
-                        <a {% if request.resolver_match.url_name == "manageCategories" %}active{% endif %}" href="{% url 'manageCategories' %}"><i class="fas fa-edit"></i></a>
+                        <a {% if request.resolver_match.url_name == "categories" %}active{% endif %}" href="{% url 'categories' %}"><i class="fas fa-edit"></i></a>
                         {% endif %}
                     </div>
                     <div id="userSessionDescription">
