added back button

--- a/usersessions/templates/usersessions/manage_categories.html
+++ b/usersessions/templates/usersessions/manage_categories.html
@@ -38,7 +38,9 @@
                                 <input type="text" id="new_category" name="newCategory" maxlength="100">
                             </td>
                             <td>
-                                <button type="submit" class="btn-submit btn" >Add New Category</button>
+                                <div class='d-flex justify-content-center'>
+                                    <button type="submit" class="btn-submit btn" >Add New Category</button>
+                                </div>  
                             </td>
                         </form>  
                     </div>
