--- a/usersessions/templates/usersessions/table_page.html
+++ b/usersessions/templates/usersessions/table_page.html
@@ -27,7 +27,10 @@
                         </table>
                     </div>
                 </div>
-
+                <div class='mt-2 d-flex justify-content-center'>
+                    <a class='btn btn-search' href="/">Back to Timer</a>
+                </div>
+                
                 <div class="mt-2">
                     <div class="pagination justify-content-center">
                         <nav aria-label="Page navigation">
