--- a/accounts/templates/accounts/change_profile_information.html
+++ b/accounts/templates/accounts/change_profile_information.html
@@ -3,7 +3,8 @@
 {% bootstrap_css %}
 {% block body %}
 
-<div class="container">
+
+<div class="container mt-4">
     <div class="row">
         <div class="col-md-2">
 
@@ -11,23 +12,48 @@
 
         <div class="col-12 col-md-8 mt-4 d-flex justify-content-center">
             <div class="card p-3">
+                <h2 class="text-center">
+                    <i style="color: Tomato" class="fas fa-address-card"></i>
+                    Update Profile Information
+                </h2>
 
-                <h1>Change Profile Information</h1>
-
-                <form method="post">
-                    <!-- Token for rotection against cross site request forgeries -->
-                    {% csrf_token %}
-
-                    {% bootstrap_form form %} <br>
-
-                    <div class="d-flex justify-content-around">
-
-                        {% buttons %}
-                        <a class="btn-submit btn " href="{% url 'profile' %}">Cancel</a>
-                        <button type="submit" class="btn-submit btn">Save</button>
-                        {% endbuttons %}
-                    </div>
-                </form>
+                <div class="card-body">
+                    <form method="post" class="was-validated">
+                        <!-- Token for rotection against cross site request forgeries  -->
+                        {% csrf_token %}
+                        <br>
+                        {% for field in form  %}
+                        {% if field.html_name == 'username' %}
+                            <div class="input-group margin-bottom-sm">
+                                <span class="input-group-addon"> 
+                                    <i style="color: tomato" class="fas fa-user fa-2x fa-fw"></i>
+                                </span> 
+                                <input type="text" id="id_username" name="username" class="form-control" value="{{field.value}}" required>
+                            </div>
+                            <div class="form-group">
+                                <small class="form-text text-muted">
+                                    Username must be 150 characters or less.
+                                </small>
+                            </div>
+                        {% endif %}
+                        {% if field.html_name == 'email' %}
+                            <div class="input-group margin-bottom-sm">
+                                <span class="input-group-addon">
+                                <i style="color: tomato" class="fa fa-envelope fa-2x fa-fw"></i>
+                                </span>    
+                                <input type="email"  name="email" class="form-control" value="{{field.value}}" title id="id_email" required>
+                            </div>
+                        {% endif %}
+                        {% endfor %}
+                        <br>
+                        <div class="d-flex justify-content-around">
+                            {% buttons %}
+                            <a class="btn-submit btn " href="{% url 'profile' %}">Cancel</a>
+                            <button type="submit" class="btn-submit btn">Save</button>
+                            {% endbuttons %}
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
 
