--- a/timer/templates/index.html
+++ b/timer/templates/index.html
@@ -63,15 +63,16 @@
                       <tr>
                         <td><strong>Task Category:</strong></td> 
                         <td><select name="taskCategory" id="taskCategory">
-                            {% for category in task_categories %}
-                            <option value="{{ category}}">{{ category}}</option>
-                            {% empty %}
-                            <option value="General">General</option>
-                            <option value="Homework">Homework</option>
-                            <option value="Studying">Studying</option>
-                            <option value="Work">Work</option>
-                            <option value="Reading">Reading</option>
-                            {% endfor %}
+                          <option value="General">General</option>
+                          <option value="Homework">Homework</option>
+                          <option value="Studying">Studying</option>
+                          <option value="Work">Work</option>
+                          <option value="Reading">Reading</option>
+                          {% for category in task_categories %}
+                            {% if category not in "General,Homework,Studying,Work,Reading" %}
+                              <option value="{{ category}}">{{ category}}</option>
+                            {% endif %}
+                          {% endfor %}
                           </select>
                         </td>
                         <td><a role="button" class="editbtn" 
