--- a/timer/templates/index.html
+++ b/timer/templates/index.html
@@ -70,7 +70,9 @@
                           <option value="Reading">Reading</option>
                           {% for category in task_categories %}
                             {% if category not in "General,Homework,Studying,Work,Reading" %}
-                              <option value="{{ category}}">{{ category}}</option>
+                              {% if category not in "general,homework,studying,work,reading" %}
+                                <option value="{{ category}}">{{ category}}</option>
+                              {% endif %}
                             {% endif %}
                           {% endfor %}
                           </select>
